
Version 1.3.0

    Version 1.3.0 is the next minor update. It is still in the development.

    Bug fixes

      * Fixed open() and POST method, without specifying the finished handler.
    
    New features
      
      * Added Filesystem API, based on CommonJS Filesystem draft specs (issue 129)

    New features

      * Presistent cookie support using --cookies=cookies.ini

    Examples

      * Added a new example on using Modernizr to detect features.

2011-06-21: Version 1.2.0

    Version 1.2.0 is a major update. It introduces a whole set of new API.

    Bug fixes

      * Fixed rendering a very large web page (issue 54)
      * Fixed reporting of CoffeeScript compile error (issue 125)

    New features

      * Added callback for console message (issue 12)
      * Improved security model via WebPage object (issue 41)
      * Added support for POST, HEAD, PUT, and DELETE (issue 88)
      * Scripts filename is now passed as phantom.scriptName
      * Added callback to capture resource requests and responses (issue 2)
      * Added the ability to load external JavaScript (issue 32)

    Examples

      * Ported examples to use WebPage object
      * Added a new example to upload an image to imagebin.org
      * Added a new example to show HTTP POST feature
      * Added a new example to sniff network traffic and save it in HAR format


2011-04-27: Version 1.1.0

    Fixed the script loading to use UTF-8 encoding (Yasuhiro Matsumoto).

    Added check for system proxy setting (Yasuhiro Matsumoto).

    Fixed building with Cygwin and Qt 4.5 (John Dalton).

    Added a new example: driver for QUnit tests (Łukasz Korecki).

    Fixed issue #20: problem with JPG transparent color (Alessandro Portale).

    Fixed issue #9: ignore first line starting with #! (Matthias, aka fourplusone).

    Fixed issue #7: support for file upload for form submission (Matthias, aka fourplusone).

    Fixed issue #35: support for disabling images loading (Ariya Hidayat).
