@@ -15,6 +15,7 @@ Version 1.3.0
     New features
 
       * Presistent cookie support using --cookies=cookies.ini
+      * Added callback for page initialization (issue 143)
 
     Examples
 
